--- a/index.ipynb
+++ b/index.ipynb
@@ -194,8 +194,8 @@
     }
    ],
    "source": [
-    "x_values = lamd\n",
-    "y_values = scaled_movies['domgross']"
+    "x_values = list( map( lambda movie: movie['budget'], scaled_movies ) )\n",
+    "y_values = list( map( lambda movie: movie[''], scaled_movies ) )"
    ]
   },
   {
