--- a/index.ipynb
+++ b/index.ipynb
@@ -760,7 +760,7 @@
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    y_hat = x_values * m + b\n",
-    "    y_act = y_actual( x, x )\n",
+    "    y_act = y_actual( x, x_values, y_values )\n",
     "    return "
    ]
   },
