Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -758,9 +758,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x_valu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def error(x_values, y_values, m, b, x):\n",
-    "    y_hat = x_values * m + b\n",
+    "    # Calc y actual \n",
     "    y_act = y_actual( x, x_values, y_values )\n",
+    "\n",
+    "    # Calc y hat\n",
+    "    y_hats = x_values * m + b\n",
+    "\n",
     "    return "
    ]
   },
