Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -754,23 +754,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"int\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-f34801c00ee7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mx_values\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
-     ]
+     "data": {
+      "text/plain": [
+       "[62.0,\n",
+       " 194.0,\n",
+       " 90.0,\n",
+       " 254.0,\n",
+       " 170.0,\n",
+       " 910.0,\n",
+       " 378.0,\n",
+       " 58.0,\n",
+       " 530.0,\n",
+       " 110.0,\n",
+       " 210.0,\n",
+       " 82.0,\n",
+       " 230.0,\n",
+       " 130.0,\n",
+       " 322.0,\n",
+       " 314.0,\n",
+       " 34.0,\n",
+       " 490.0,\n",
+       " 450.0,\n",
+       " 410.0,\n",
+       " 290.0,\n",
+       " 78.0,\n",
+       " 650.0,\n",
+       " 610.0,\n",
+       " 570.0,\n",
+       " 250.0,\n",
+       " 330.0,\n",
+       " 102.0,\n",
+       " 150.0,\n",
+       " 810.0]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_hats = [ x * for x in x_values]"
+    "y_hats = [ x * 4 + 10 for x in x_values]\n",
+    "y_hats"
    ]
   },
   {
@@ -784,7 +813,7 @@
     "    y_act = y_actual( x, x_values, y_values )\n",
     "\n",
     "    # Calc y hat\n",
-    "    y_hats = x_values * m + b\n",
+    "    y_hats = [ * m + b for x in x_values \n",
     "\n",
     "    return "
    ]
