--- a/index.ipynb
+++ b/index.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,9 +812,14 @@
     "    # Calc y actual \n",
     "    y_act = y_actual( x, x_values, y_values )\n",
     "\n",
-    "    # Calc y hat\n",
-    "    y_hats = [ * m + b for x in x_values \n",
+    "    # Calc y hats\n",
+    "    y_hats = [ x * m + b for x in x_values ]\n",
     "\n",
+    "    # Find corresponding y hat for given x\n",
+    "    combined_values = list(zip(x_values, y_values))\n",
+    "    point_at_x = list(filter(lambda point: point[0] == x,combined_values))[0]\n",
+    "    \n",
+    "    \n",
     "    return "
    ]
   },
