Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -816,7 +816,7 @@
     "    y_hats = [ x * m + b for x in x_values ]\n",
     "\n",
     "    # Find corresponding y hat for given x\n",
-    "    combined_values = list(zip(x_values, y_values))\n",
+    "    combined_values = list(zip(x_values, y_hats))\n",
     "    point_at_x = list(filter(lambda point: point[0] == x,combined_values))[0]\n",
     "    \n",
     "    \n",
