--- a/index.ipynb
+++ b/index.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,16 +818,29 @@
     "    # Find corresponding y hat for given x\n",
     "    combined_values = list(zip(x_values, y_hats))\n",
     "    point_at_x = list(filter(lambda point: point[0] == x,combined_values))[0]\n",
+    "    y_hat = point_at_x[1]\n",
     "    \n",
+    "    err = y_act - y_hat\n",
     "    \n",
-    "    return "
+    "    return err"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.099999999999994"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error(x_values, y_values, 1.7, 10, 13) # -6.099999999999994"
    ]
