--- a/index.ipynb
+++ b/index.ipynb
@@ -881,20 +881,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    trace = \n",
+    "    trace = {'marker': {'color': 'red'},\n",
+    "     'mode': 'lines',\n",
+    "     'name': 'error at 120',\n",
+    "     'x': [120, 120],\n",
+    "     'y': [93.0, 214.0]}\n",
+    "    return trace\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marker': {'color': 'red'},\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'error at 120',\n",
+       " 'x': [120, 120],\n",
+       " 'y': [93.0, 214.0]}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error_at_120m = error_line_trace(x_values, y_values, 1.7, 10, 120)\n",
     "\n",
