--- a/index.ipynb
+++ b/index.ipynb
@@ -886,11 +886,13 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
+    "    \n",
+    "    y_\n",
     "    trace = {'marker': {'color': 'red'},\n",
     "     'mode': 'lines',\n",
     "     'name': 'error at ' + str(x),\n",
     "     'x': [x, x],\n",
-    "     'y': [93.0, 214.0]}\n",
+    "     'y': [y_hat, y_act]}\n",
     "    return trace\n",
     "    "
    ]
