--- a/index.ipynb
+++ b/index.ipynb
@@ -886,8 +886,8 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    \n",
-    "    y_\n",
+    "    y_act = y_actual( x, x_values, y_values )\n",
+    "    y_hat = error(x_values, y_values, m, b, x)\n",
     "    trace = {'marker': {'color': 'red'},\n",
     "     'mode': 'lines',\n",
     "     'name': 'error at ' + str(x),\n",
