--- a/index.ipynb
+++ b/index.ipynb
@@ -1203,7 +1203,9 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    pass"
+    "    traces = []\n",
+    "    for x in x_values:\n",
+    "        t"
    ]
   },
   {
