--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2027,8 +2027,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    err = error(x_values, y_values, m, b, x)\n",
-    "    return "
+    "    pass"
    ]
   },
   {
