--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2022,30 +2022,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    return error(x_values, y_values, m, b, x) ** 2"
+    "    err = error(x_values, y_values, m, b, x)\n",
+    "    return "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37.20999999999993"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_values and y_values and squared_error(x_values, y_values, 1.7, 10, x_values[0]) # 37.20999999999993"
    ]
@@ -2064,7 +2054,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    sq_errs = "
+    "    pass"
    ]
   },
   {
