--- a/index.ipynb
+++ b/index.ipynb
@@ -2072,24 +2072,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sq_errs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-63-8c9e54057b88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# check\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msq_errs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sq_errs' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# check\n",
-    "len(sq_errs)"
+    "len(squared_errors(x_values, y_values, 1.7, 10))"
    ]
   },
   {
@@ -2157,7 +2156,7 @@
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
-    "    pass"
+    "    squared_errors(x_values, y_values, m, b)"
    ]
   },
   {
