--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2151,31 +2151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
-    "    rss = sum( squared_errors(x_values, y_values, m, b) )\n",
-    "    return rss"
+    "    squared_errors(x_values, y_values, m, b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "327612.2800000001"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "residual_sum_squares(x_values, y_values, 1.7, 10) # 327612.2800000001"
    ]
@@ -2189,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,20 +2188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19.07914160659343"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "root_mean_squared_error(x_values, y_values, 1.7, 10) # 19.07914160659343"
    ]
